--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,11 @@
 [package]
 name    = "steamy_base"
 version = "0.2.0"
-
-authors = ["meh. <meh@schizofreni.co>"]
-license = "WTFPL"
-exclude = ["support/*"]
-
-description = "Library to interact with the Steam controller."
-repository  = "https://github.com/meh/steamy"
-keywords    = ["steam", "input", "controller"]
+edition = "2021"
 
 [dependencies]
-byteorder = "0.5"
-bitflags  = "0.3"
+byteorder = "1.5"
+bitflags  = "2.5"
 
 [target.'cfg(target_os = "linux")'.dependencies.rusb]
 version = "0.9"
